@@ -1,5 +1,12 @@
 2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[boot] Use INSTALL.UTF-8 from gnulib for INSTALL.
+
+	* autogen.sh (actually): New func; use it
+	to copy INSTALL.UTF-8 from gnulib to INSTALL.
+
+2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	New (database postgres-qcons) fluid: sql-quote-auto-E?
 
 	* doc/ref.texh (qcons quoting): Add section "Standard Conforming
